--- a/session-2/Apper React Checklist/README
+++ b/session-2/Apper React Checklist/README
@@ -16,5 +16,8 @@ the link should be inside `**checklist.txt`.
   c. Only one way to mutate state
 
 ===============================================================================================
-Link to session 2 homework repo: https://github.com/angelodacasin-swe/apper-frontend-course/tree/main/session-2/Apper%20React%20Checklist
-Link to checklist.txt: https://github.com/angelodacasin-swe/apper-frontend-course/blob/main/session-2/Apper%20React%20Checklist/checklist.txt
+Link to session 2 homework repo: 
+https://github.com/angelodacasin-swe/apper-frontend-course/tree/main/session-2/Apper%20React%20Checklist
+
+Link to checklist.txt: 
+https://github.com/angelodacasin-swe/apper-frontend-course/blob/main/session-2/Apper%20React%20Checklist/checklist.txt
